[package]
authors = ["sunquana <sunquana@gmail.com>"]
edition = "2018"
name = "libhello"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["full"]}
